--- a/api/package.json
+++ b/api/package.json
@@ -2,16 +2,69 @@
   "name": "employee_happiness_api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch",
+    "test": "jest",
+    "test:watch": "yarn test -- --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.26.1",
     "body-parser": "^1.19.0",
+    "celebrate": "^12.0.1",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "express-winston": "^4.0.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
-    "swagger-ui-express": "^4.1.4"
+    "short-uuid": "^3.1.1",
+    "swagger-ui-express": "^4.1.4",
+    "typedi": "^0.8.0",
+    "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/node": "^13.9.3",
+    "babel-jest": "^25.2.4",
+    "dotenv": "^8.2.0",
+    "jest": "^25.2.4",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
+    "ts-node": "^8.8.1",
+    "typescript": "^3.8.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "@babel/preset-typescript"
+    ],
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ]
   }
 }
