--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "yarn api/src/index.ts && yarn frontend/server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,6 @@
   "bugs": {
     "url": "https://github.com/leanderhoedt/employee_happiness/issues"
   },
-  "homepage": "https://github.com/leanderhoedt/employee_happiness#readme"
+  "homepage": "https://github.com/leanderhoedt/employee_happiness#readme",
+  "proxy": "http://localhost:3001"
 }
