--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --watch",
     "test": "jest",
-    "test:watch": "yarn test -- --watch"
+    "test:watch": "npm run test -- --watch"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,7 @@
     "express-jwt": "^5.3.1",
     "express-winston": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.5",
+    "mongoose": "^5.9.7",
     "short-uuid": "^3.1.1",
     "swagger-ui-express": "^4.1.4",
     "typedi": "^0.8.0",
