--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,9 @@
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/express": "^4.17.3",
+    "@types/jest": "^25.1.4",
+    "@types/mongoose": "^5.7.8",
     "@types/node": "^13.9.3",
     "babel-jest": "^25.2.4",
     "dotenv": "^8.2.0",
