--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,17 @@
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "clsx": "^1.1.0",
     "express": "^4.17.1",
     "formik": "^2.1.4",
     "http-proxy-middleware": "^1.0.3",
     "next": "9.3.1",
+    "next-images": "^1.4.0",
     "react": "16.13.1",
     "react-cookie": "^4.0.3",
     "react-dom": "16.13.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.2"
