--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,11 @@ fabric.properties
 /api/node_modules/
 /frontend/node_modules/
 /.idea/
+
+# next.js build output
+.next
+# dotenv environment variables file (build for Zeit Now)
+.env
+.env.build
+# Dependency directories
+node_modules/
