--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "express-winston": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
+    "reflect-metadata": "^0.1.13",
     "short-uuid": "^3.1.1",
     "swagger-ui-express": "^4.1.4",
     "typedi": "^0.8.0",
