--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "yarn api/src/index.ts && yarn frontend/server.js"
+    "dev": "npm run dev api/src/index.ts && npm run dev frontend/server.js"
   },
   "repository": {
     "type": "git",
